fixed spacing

--- a/style.css
+++ b/style.css
@@ -850,7 +850,6 @@ video {
     width: 100%;
     text-align: center;
     word-wrap: break;
-    padding-left: 20px;
   }
   .contact.container .section-title {
     margin: 60px;
